# ClownScoreBot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
sources/: bot.cpp  bot.hpp  error.hpp  format.hpp  main.cpp  score_database.cpp  score_database.hpp  simple_bot.cpp  simple_bot.hpp  utils.cpp  utils.hpp
